Modification of url-pattern in web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 	<!-- Route API method requests to the backend. -->
 	<servlet-mapping>
 		<servlet-name>EndpointsServlet</servlet-name>
-		<url-pattern>/_ah/api/*</url-pattern>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 
 
